# GPT-Trader

./: .gitignore  LICENSE  READEME.md  README.md  pyproject.toml
tradegpt/: main.py  prompt.py  utils.py
tradegpt/data/: context.py  models.py
tradegpt/data/insights/: current_price.py  insight.py  linelevels.py  momentum.py  news.py  options.py  price_action.py  vix.py
tradegpt/data/sources/: datasource.py  tdameritrade.py  yahoo.py
